feat: Refactor tests to utilize Page<T> for pagination; update assertions and mock responses across Dish, Order, and Restaurant handlers and use cases