@@ -1,6 +1,7 @@
 package com.plazoleta.plazoleta_microservice.infrastructure.out.jpa.adapter;
 
 import com.plazoleta.plazoleta_microservice.domain.model.Restaurant;
+import com.plazoleta.plazoleta_microservice.domain.util.Page;
 import com.plazoleta.plazoleta_microservice.infrastructure.out.jpa.entity.RestaurantEntity;
 import com.plazoleta.plazoleta_microservice.infrastructure.out.jpa.mapper.IRestaurantEntityMapper;
 import com.plazoleta.plazoleta_microservice.infrastructure.out.jpa.repository.IRestaurantRepository;
@@ -9,7 +10,9 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.util.List;
 import java.util.Optional;
@@ -101,15 +104,35 @@ class RestaurantJpaAdapterTest {
 
     @Test
     void testFindAllRestaurants() {
-        List<RestaurantEntity> entities = List.of(entityRestaurant);
-        Page<RestaurantEntity> page = new PageImpl<>(entities);
+        int pageIndex = 0;
+        int pageSize = 2;
+        Pageable pageable = PageRequest.of(pageIndex, pageSize);
 
-        when(restaurantRepository.findAll(PageRequest.of(0, 2))).thenReturn(page);
-        when(restaurantEntityMapper.toRestaurant(entityRestaurant)).thenReturn(domainRestaurant);
+        RestaurantEntity entity1 = new RestaurantEntity(1L, "Rest1", "Address1", "NIT1", "123", "logo1.png", 1L);
+        RestaurantEntity entity2 = new RestaurantEntity(2L, "Rest2", "Address2", "NIT2", "456", "logo2.png", 2L);
+        List<RestaurantEntity> entities = List.of(entity1, entity2);
 
-        List<Restaurant> result = restaurantJpaAdapter.findAllRestaurants(0, 2);
+        Restaurant domain1 = Restaurant.builder().id(1L).name("Rest1").urlLogo("logo1.png").build();
+        Restaurant domain2 = Restaurant.builder().id(2L).name("Rest2").urlLogo("logo2.png").build();
 
-        assertEquals(1, result.size());
-        assertEquals(domainRestaurant, result.getFirst());
+        org.springframework.data.domain.Page<RestaurantEntity> springPage =
+                new PageImpl<>(entities, pageable, 10);
+
+        when(restaurantRepository.findAll(pageable)).thenReturn(springPage);
+        when(restaurantEntityMapper.toRestaurant(entity1)).thenReturn(domain1);
+        when(restaurantEntityMapper.toRestaurant(entity2)).thenReturn(domain2);
+
+        Page<Restaurant> result = restaurantJpaAdapter.findAllRestaurants(pageIndex, pageSize);
+
+        assertEquals(2, result.getContent().size());
+        assertEquals("Rest1", result.getContent().get(0).getName());
+        assertEquals("Rest2", result.getContent().get(1).getName());
+        assertEquals(10, result.getTotalElements());
+        assertEquals(0, result.getPageNumber());
+        assertEquals(2, result.getPageSize());
+
+        verify(restaurantRepository).findAll(pageable);
+        verify(restaurantEntityMapper).toRestaurant(entity1);
+        verify(restaurantEntityMapper).toRestaurant(entity2);
     }
 }
